# personal-finance

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/common/: google_api_helpers.py
src/scripts/: create_new_month_sheet.py
test/common/: google_api_helpers_test 2.py  google_api_helpers_test.py
