[tool.poetry]
name = "finance-analysis"
version = "0.1.0"
description = ""
authors = ["Hunter Lybbert <sebastien@eustace.io>"]
repository = "https://github.com/Hunter-Lybbert/personal-finance"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "~3.9"
numpy = "^1.23.5"
pandas = "^1.5.1"
matplotlib = "^3.6.2"
scipy = "^1.9.3"
google-api-python-client = "^2.66.0"
gspread = "^5.7.1"
oauth2client = "^4.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
